# kdescent

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: requirements.txt
docs/source/: conf.py  index.rst  installation.rst  reference.rst
docs/source/notebooks/: hmf_upweight.ipynb  integration.ipynb  intro.ipynb  kdescent-multidiff-integration.py  kdescent-multigrad-integration.py
kdescent/: __init__.py  _version.py  descent.py  kdestat.py  keygen.py  kstats.py
